--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.main {
+  flex-flow: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: var(--gap, 3rem);
 }
 
-.App-link {
-  color: #61dafb;
+.progress {
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.timer {
+  position: absolute;
+  top: 200px;
+  left: 150px;
+}
+
+.timer-list {
+  list-style: none;
+  display: flex;
+  padding: 0.5em;
+  border-radius: 20px;
+  gap: 0.5rem;
+  background-color: var(--bg-secondary);
+}
+
+.timer-item {
+  padding: 0.5em 1em;
+  cursor: pointer;
+}
+
+.timer-item.active {
+  background-color: var(--bg-active);
+  border-radius: 20px;
+  color: var(--text-secondary);
+}
+
+.progress {
+  background-color: var(--bg-secondary);
+  border-radius: 50%;
 }
