--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,13 @@
+:root {
+  --bg-primary: #1e2140;
+  --bg-secondary: #151932;
+  --bg-active: #f87074; 
+  --text-primary: #f87074;
+  --text-secondary: #dfe6ff;
+}
 body {
+  background-color: var(--bg-primary);
+  color: var(--text-primary);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,7 +16,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.grid {
+  display: grid;
+}
+
+.flex {
+  display: flex;
+}
+
+.text-secondary {
+  color: var(--text-secondary);
 }
