--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,14 @@
 
 .progress {
   position: relative;
+  box-shadow: -41px -25px 36px -6px #424968;
 }
 
 .timer {
   position: absolute;
-  top: 200px;
-  left: 150px;
+  top: 50px;
+  left: 90px;
+  width: 170px;
 }
 
 .timer-list {
@@ -38,3 +40,15 @@
   background-color: var(--bg-secondary);
   border-radius: 50%;
 }
+
+.btn-stop {
+  display: block;
+  margin: auto;
+  border: none;
+  background-color: var(--bg-secondary);
+  color: var(--text-secondary);
+  letter-spacing: 0.5em;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
